--- a/netty4_demo/src/main/resources/log4j.properties
+++ b/netty4_demo/src/main/resources/log4j.properties
@@ -1,7 +1,11 @@
-log4j.rootCategory=DEBUG, FILE
+log4j.rootCategory=DEBUG, FILE, CONSOLE
 
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=/home/nick/data/server.log
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %5p %t %c{2}:%L - %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss SSS} %5p %t %c{2}:%L - %m%n
 log4j.appender.FILE.Append=false
+
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss SSS} %5p %t %c{2}:%L - %m%n
