--- a/java_features/pom.xml
+++ b/java_features/pom.xml
@@ -12,8 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>10</maven.compiler.source>
-    <maven.compiler.target>10</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -45,8 +45,8 @@
           <configuration>
             <toolchains>
               <jdk>
-                <version>10</version>
-                <vendor>sun</vendor>
+                <version>11</version>
+                <vendor>oracle</vendor>
               </jdk>
             </toolchains>
           </configuration>
