--- a/java_features/pom.xml
+++ b/java_features/pom.xml
@@ -23,6 +23,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.20</version>
+    </dependency>
   </dependencies>
 
   <build>
