--- a/java_features/pom.xml
+++ b/java_features/pom.xml
@@ -41,6 +41,12 @@
       <version>3.27.0-GA</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.13.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
